--- a/TwoFactorAuthDesktop.csproj
+++ b/TwoFactorAuthDesktop.csproj
@@ -23,6 +23,10 @@
     <None Remove="FirmwareClient\**" />
     <AvaloniaResource Remove="FirmwareClient\**" />
     <AvaloniaXaml Remove="FirmwareClient\**" />
+    <Compile Remove="linux-desktop\**" />
+    <None Remove="linux-desktop\**" />
+    <AvaloniaResource Remove="linux-desktop\**" />
+    <AvaloniaXaml Remove="linux-desktop\**" />
     <AvaloniaResource Include="Assets\**" />
     <AvaloniaResource Include="app.ico" />
   </ItemGroup>
